--- a/AutoSkolaJUS/AutoSkolaJUS/AutoSkolaJUS.csproj
+++ b/AutoSkolaJUS/AutoSkolaJUS/AutoSkolaJUS.csproj
@@ -52,6 +52,7 @@
     <Compile Include="AutoSkola.Designer.cs">
       <DependentUpon>AutoSkola.cs</DependentUpon>
     </Compile>
+    <Compile Include="KandidatClass.cs" />
     <Compile Include="Kandidati.cs">
       <SubType>Form</SubType>
     </Compile>
